--- a/equipo.html
+++ b/equipo.html
@@ -180,7 +180,7 @@
         </div>
         <div class="member-box">
             <div class="member-img">
-                <img src="images/equipo/seba-vidal.JPG">
+                <img src="images/equipo/seba-vidal.jpg">
             </div>
             <h1>Sebastián Vidal</h1>
             <h2>Director Académico y Asesor</h2>
