--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -15,17 +15,23 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!-- Styles.css -->
-    <link rel="stylesheet" href="./css/styles.css">       
+    <link rel="stylesheet" href="./css/styles.css">
+    <!-- Script.js -->
+    <script src="./js/script.js" defer></script>       
 </head>
 
-<body id="body">
-    <!-- Barra de navegación -->
-    <nav>
-        <!-- Logo -->
-        <a href="index.html"><img src="./images/Logo.png"></a>
-        <div class="nav-links" id="navLinks">
-            <!-- Ícono de cerrar menú -->
-            <i class="fa fa-times" onclick="hideMenu()"></i>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="brand-img">
+            <a href="index.html"><img src="./images/Logo.png"></a>
+        </div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="equipo.html">EQUIPO</a></li>
@@ -33,8 +39,6 @@
                 <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </div>
-        <!-- Menú -->
-        <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 
     <section class="services-page">
@@ -66,7 +70,7 @@
     </div>
 
     <div class="services-title">
-        <h2>Servicios</h2>
+        <h2>Nuestros Servicios</h2>
     </div>
 
     <section class="services">
@@ -189,22 +193,6 @@
         </ul>
         <p>Rimu Capacita | Copyright &copy; 2022</p>
     </footer>
-
-
-
-<!-- JS Toggle Menu -->
-<script>
-    var navLinks = document.getElementById("navLinks");
-
-    function showMenu(){
-        navLinks.style.right = "0";
-        body.style.overflow = "hidden";
-    }
-    function hideMenu(){
-        navLinks.style.right = "-200px";
-        body.style.overflowY = "auto";
-    }
-</script>
 
 </body>
 </html>
