--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -145,7 +145,7 @@
                 </ul>
             </div>
             <div class="service-box">
-                <h1>Programa de Integración Escolas (PIE)</h1>
+                <h1>Programa de Integración Escolar (PIE)</h1>
                 <ul>
                     <li>Estrategias cognitivas para favorecer la mediación de aprendizajes según necesidades educativas especiales (NEE)</li>
                     <li>Diseño universal de aprendizajes (DUA)</li>
