--- a/contacto.html
+++ b/contacto.html
@@ -68,17 +68,23 @@
                 <a href="tel:+56945021411">(56) 945021411</a>
             </div>
             <div class="item">
+                <h3>TRANSBANK COMERCIO</h3>
+                <div class="icons">
+                    <a href="https://www.webpay.cl/company/52159" target="_blank" class = "fa fa-credit-card"><span>Webpay</span></a>
+                </div>
+            </div>
+            <div class="item">
                 <h3>REDES SOCIALES</h3>
                 <div class="icons">
-                    <a href="https://api.whatsapp.com/send?phone=56945021411" target="_blank" class = "fa fa-whatsapp"></a>
-                    <a href="https://instagram.com/rimucapacita?igshid=YmMyMTA2M2Y=" target="_blank" class = "fa fa-instagram"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100081746764409" target="_blank" class = "fa fa-facebook"></a>
+                    <a href="https://api.whatsapp.com/send?phone=56945021411" target="_blank" class = "fa fa-whatsapp"><span>Chat whatsapp</span></a>
+                    <a href="https://instagram.com/rimucapacita?igshid=YmMyMTA2M2Y=" target="_blank" class = "fa fa-instagram"><span>@rimucapacita</span></a>
+                    <a href="https://www.facebook.com/profile.php?id=100081746764409" target="_blank" class = "fa fa-facebook"><span>Rimu Capacita</span></a>
                 </div>
             </div>
         </div>
 
         <div class="right-side">
-            <form action="https://formsubmit.co/nosoychileno@gmail.com" method="post">
+            <form action="https://formsubmit.co/rimucapacita@gmail.com" method="post">
                 <div class="top">
                     <input type="text" name="nombre" placeholder="Nombre" required>
                     <input type="email" name="correo" placeholder="Email" required>
