--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -79,7 +79,7 @@
                 <h1>Cursos</h1>
                 <h4>(8 o 16 horas)</h6>
                 <ul>
-                    <li>Aprendizaje basado en proyectos, una mirada integradora</li>
+                    <li>Aprendizaje basado en proyectos, diseño e implementación</li>
                     <li>Capacitación docente en evaluación por competencias</li>
                     <li>Capacitación para trabajo en equipos (directivos)</li>
                     <li>Estrategias de autocuidado para comunidades escolares</li>
@@ -90,29 +90,38 @@
                     <li>Estrategias de resolución de conflictos</li>
                     <li>Observación y retroalimentación de la gestión del aula</li>
                     <li>Herramientas claves para confección de Portafolio docente</li>
-                    <li>Management y liderazgo de alto desempeño - competencias claves</li>
-                    <li>Curso de sexualidad, afectividad y género</li>
-                    <li>Enfoque de género y diversidad sexual</li>
-                    <li>Técnicas para el desarrollo de habilidades de gestión para docentes y directivos</li>
+                    <li>Managgment y liderazgo de alto desempeño - competencias claves</li>
                     <li>Capacidades de innovación y emprendimiento</li>
-                    <li>Lectoescritura y comprensión lectora</li>
+                    <li>Lectoescritura y compresión lectora</li>
                     <li>Diversidad sexual e identidad de género en educación</li>
-                    <li>Diseño Universal de Aprendizaje (DUA)</li>
-                    <li>Estrategias para el trabajo con estudiantes con TEL (Transtorno Específico del Lenguaje)</li>
-                    <li>La importancia de la salud mental en las comunidades escolares</li>
-                    <li>Incrementando la motivación en el aula desde la neurociencia</li>
+                    <li>DUA</li>
+                    <li>Estrategias para el trabajo con estudiantes con TEL</li>
+                    <li>Como fortalecer la salud mental en las comunidades escolares</li>
+                    <li>Incrementando la motivación en el aula desde la neurociencias</li>
 
+                </ul>
+            </div>
+            <div class="service-box">
+                <h1>Cursos más solicitados</h1>
+                <ul>
+                    <li>Observación y retroalimentación de la gestión del aula</li>
+                    <li>Herramientas claves para confección de Portafolio docente</li>
+                    <li>Managgmenet y liderazgo de alto desempeño - competencias claves</li>
+                    <li>Lectoescritura y comprensión lectora</li>
+                    <li>Divesidad sexual e identidad de género en educación</li>
+                    <li>Como fortalecer la salud mental en las counidades escolares</li>
+                    <li>Incrementando al motivación en el aula desde la neurociencias</li>
                 </ul>
             </div>
             <div class="service-box">
                 <h1>Workshop</h1>
                 <ul>
                     <li>Neurociencias y educación</li>
-                    <li>Gestionando las emociones</li>
-                    <li>Motivación en el aula</li>
-                    <li>Aprendizaje cooperativo</li>
-                    <li>Comunicación efectiva</li>
-                    <li>Lideres innovadores</li>
+                    <li>Como trabajar la motivación en el aula</li>
+                    <li>Liderazgo de alto desempeño para equipos directivos</li>
+                    <li>La importancia de la Comunicación efectiva para el logro de resultados</li>
+                    <li>Lideres innovadores y empáticos</li>
+                    <li>Sexualidad, afectividad y género</li>
                 </ul> 
             </div>
             <div class="service-box">
@@ -147,26 +156,23 @@
             <div class="service-box">
                 <h1>Programa de Integración Escolar (PIE)</h1>
                 <ul>
-                    <li>Estrategias cognitivas para favorecer la mediación de aprendizajes según necesidades educativas especiales (NEE)</li>
-                    <li>Diseño universal de aprendizajes (DUA)</li>
-                    <li>Síndrome de déficit atencional en el aula</li>
+                    <li>Herramientas y estrategias para favorecer la mediación de aprendizajes según necesidades educativas especiales (NEE)</li>
+                    <li>Diseño universal de aprendizajes</li>
                     <li>Aplicaciones del diseño universal de aprendizaje y adecuaciones curriculares: Estrategias para la educación inclusiva</li>
-                    <li>Adaptaciones curriculares y evaluación diferenciada como estrategia de integración de la diversidad</li>
-                    <li>Prevención del fracaso escolar en estudiantes con síndrome de déficit atencional (SDA)</li>
-                    <li>Estrategias para lograr éxito escolar en estudiantes con transtorno por déficit atencional con y sin hiperactividad</li>
-                    <li>Adaptación curricular y evaluación diferenciada</li>
-                    <li>Evaluación diferenciada, un desafío para todos</li>
+                    <li>Adaptaciones curriculares y evaluación diferenciada</li>
+                    <li>Estrategias para abordar estudiantes con trastorno por déficit atencional con y sin hiperactividad</li>
+                    <li>Evaluación diferenciada</li>
                     <li>Herramientas y estrategias de intervención en niños y niñas con transtornos del espectro autista (TEA)</li>
                 </ul>
             </div>
             <div class="service-box">
                 <h1>Convivencia</h1>
                 <ul>
+                    <li>Resolución de conflictos</li>
                     <li>Técnicas de mediación escolar para una sana convivencia </li>
-                    <li>Técnicas en resolución pacífica de conflictos: Mediación Escolar</li>
+                    <li>Técnicas en resolución pacífica de conflictos: Mediación escolar</li>
                     <li>Técnicas de mediación escolar para resolver conflictos en el aula</li>
-                    <li>Transtornos de conducta en niños y adolescentes para aplicar estrategias de aprendizaje</li>
-                    <li>Técnicas de abordaje de los problemas del comportamiento escolar desde la comunicación afectiva</li>
+                    <li>Técnicas de abordaje de los problemas del comportamiento escolar</li>
                 </ul>
             </div>
         </div>
