changes to services

--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -120,39 +120,11 @@
                     <li>Como trabajar la motivación en el aula</li>
                     <li>Liderazgo de alto desempeño para equipos directivos</li>
                     <li>La importancia de la Comunicación efectiva para el logro de resultados</li>
-                    <li>Lideres innovadores y empáticos</li>
+                    <li>Líderes innovadores y empáticos</li>
                     <li>Sexualidad, afectividad y género</li>
                 </ul> 
             </div>
-            <div class="service-box">
-                <h1>Lenguaje</h1>
-                <ul>
-                    <li>Desarrollo del fomento lector para optimizar la comprensión de lectura</li>
-                    <li>Diseñar estrategias didácticas para el desarrollo de la producción escrita en educación general básica</li>
-                    <li>Estrategias efectivas para la enseñanza de la lectura y de la escritura en el nivel inicial</li>
-                    <li>Lenguaje y aprendizaje desde la neurociencia al aula</li>
-                    <li>Estrategias de comprensión de lectura, un desafio que enfrentar</li>
-                    <li>Estrategias didácticas para la enseñanza de la producción escrita</li>
-                    <li>Estrategias didácticas para el desarrollo de la comprensión oral y el vocabulario en pre-escolar y NBI</li>
-                    <li>Desarrollo de la comprensión lectora desde pre-escolar hasta 4° básico</li>
-                    <li>Literacidad: Estrategias para el desarrollo eficaz de la comprensión lectora y la producción de textos en primer ciclo básico</li>
-                    <li>Estrategias efectivas para desarollar la comprensión de lectura y la producción escrita en educación general básica</li>
-                </ul>
-            </div>
-            <div class="service-box">
-                <h1>Mátematicas</h1>
-                <ul>
-                    <li>Aplicación de estrategias metodológicas para la enseñanza y el aprendizaje de la geometría</li>
-                    <li>Estrategias didácticas para la enseñanza de fracciones y decimales</li>
-                    <li>Didáctica de las matemáticas para la formación inicial</li>
-                    <li>Metodologías y estrategias para desarrollar la resolución de problemas matemáticos en el eje de números y operaciones de 1° a 6° básico</li>
-                    <li>Estrategias para la resolución de problemas matemáticos</li>
-                    <li>Aplicar estrategias didácticas de las matemáticas y las transformaciones isométricas</li>
-                    <li>Metodologías y estrategias efectivas para la enseñanza de las matemáticas</li>
-                    <li>Estrategias prácticas para desarrollar la resolución de problemas matemáticos</li>
-                    <li>Análisis pedagógico-didáctico de nuevas bases curriculares de matemáticas de 7° básico a 2° medio</li>
-                </ul>
-            </div>
+            
             <div class="service-box">
                 <h1>Programa de Integración Escolar (PIE)</h1>
                 <ul>
